Fix text overflow issue in table/:id/user view

--- a/sass/partials/_tableUsers.scss
+++ b/sass/partials/_tableUsers.scss
@@ -16,17 +16,21 @@
       @include rem(margin-top, 16);
 
       &__item {
-        align-items: center;
         display: flex;
-        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
         @include rem(margin-bottom, 16);
 
         @include desktop {
+          flex-direction: row;
+          justify-content: space-between;
           @include rem(margin-right, 16);
         }
 
         &__avatar {
-          @include rem(margin-right, 8);
+          @include desktop {
+            @include rem(margin-right, 8);
+          }
 
           img {
             border-radius: 4px;
@@ -38,6 +42,11 @@
         &__info {
           display: flex;
           flex-direction: column;
+          align-items: center;
+
+          @include desktop {
+            align-items: flex-start;
+          }
 
           &__title {
             display: flex;
@@ -51,10 +60,19 @@
           &__subtitle {
             display: flex;
             justify-content: space-between;
+            text-align: center;
+
+            @include desktop {
+              text-align: left;
+            }
 
             p {
               color: $text-color-alternate;
               font-weight: 500;
+              white-space: nowrap;
+              text-overflow: ellipsis;
+              overflow: hidden;
+              @include rem(width, 180);
               @include rem(font-size, 12);
             }
           }
